--- a/properties/typeConverter.properties
+++ b/properties/typeConverter.properties
@@ -10,5 +10,8 @@ VARCHAR2=String
 NVARCHAR2=String
 NUMBER=Long
 CHAR=String
+MEDIUMTEXT=String
+TINYINT=Integer
+LONGTEXT=String
 #Table的前缀或者后缀
 tableRemovePrefixes=tb_,co_,pe_,bs_,em_,sys_
