--- a/templates/springboot/${path2}_${project}/src/main/resources/application.yml
+++ b/templates/springboot/${path2}_${project}/src/main/resources/application.yml
@@ -5,7 +5,7 @@ server:
 spring:
   #1.应用配置
   application:
-    name: ihrm-company #指定服务名
+    name: ihrm-${ClassName} #指定服务名
   #2.数据库连接池
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
